-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.x, 5.0.0, 5.0.1
-
b6a61211280aa6ddd56f107a9795c9824b7702b0
Thiago mentioned that QDate should not be localized[1]. Thus, the below related functions from QDate class[2] should not use localized names.
QString longDayName ( int weekday, MonthNameType type ) QString longMonthName ( int month, MonthNameType type ) QString shortDayName ( int weekday, MonthNameType type ) QString shortMonthName ( int month, MonthNameType type )
We have missed to change that in Qt 5. This issue reported to remind us to change it in the future releases.
[1] https://codereview.qt-project.org/#change,42602
[2] http://doc.qt.digia.com/qt/qdate.html
- relates to
-
QTBUG-80441
Remove all locale-awareness from Q(Date|Time)+
-
- Closed
-